--- a/_sass/colors.scss
+++ b/_sass/colors.scss
@@ -5,13 +5,13 @@ $light-on-primary: #CCEFD4;
 $light-primary-container: #86E39C;
 $light-on-primary-container: #08581B;
 
-$light-surface-0: #FAFFFA;
-$light-surface-1: #ECFEEC;
-$light-surface-2: #DFFBDC;
-$light-surface-3: #D0F9CC;
+$light-surface-0: #F2FCF1;
+$light-surface-1: #E7FAE5;
+$light-surface-2: #DFF7E1;
+$light-surface-3: #D9F1DB;
 
-$light-on-surface: #000000;
-$light-on-surface-less: #444444;
+$light-on-surface: #18301B;
+$light-on-surface-less: #4D604F;
 
 $light-outline: #666666;
 $light-outline-less: #999999;
@@ -21,13 +21,13 @@ $dark-on-primary: #002908;
 $dark-primary-container: #1F582A;
 $dark-on-primary-container: #E5FCE2;
 
-$dark-surface-0: #000502;
-$dark-surface-1: #001405;
-$dark-surface-2: #011F0A;
-$dark-surface-3: #00290E;
+$dark-surface-0: #041109;
+$dark-surface-1: #0E1812;
+$dark-surface-2: #171F1B;
+$dark-surface-3: #1D2621;
 
-$dark-on-surface: #ffffff;
-$dark-on-surface-less: #bbbbbb;
+$dark-on-surface: #CEDED0;
+$dark-on-surface-less: #9EB3A1;
 
 $dark-outline: #aaaaaa;
 $dark-outline-less: #999999;
