--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,10 @@
 layout: default
 ---
 
-<h1 class="page-title">{{ page.title }}</h1>
+<div class="page-top">
+    <h1 class="page-title">{{ page.title }}</h1>
+</div>
+
 <section>
     {{ content }}
 </section>
