--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
         {% else %}
             <title>{{ site.title }}</title>
         {% endif %}
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400..900&family=Poppins:wght@400..900&family=Roboto+Mono">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400..900&family=Poppins:wght@400;600&family=Roboto+Mono">
         <link rel="stylesheet" href="{{ "/style.css" | relative_url }}">
     </head>
     <body>
