change color of table of contents links

--- a/post-style.scss
+++ b/post-style.scss
@@ -82,7 +82,7 @@
     padding-inline-start: spacing.$spacing-large;
 }
 .toc-entry a {
-    color: colors.$on-surface-less;
+    color: colors.$primary;
     text-decoration: underline transparent;
     transition: all 50ms;
 }
