add syntax highlighting stylesheet

--- a/style.scss
+++ b/style.scss
@@ -5,6 +5,7 @@
 @use "spacing.scss";
 @use "colors.scss";
 @use "markdowncontent.scss";
+@use "syntax-highlighting-default.css";
 
 html {
     background: colors.$surface-0;
