--- a/post-style.scss
+++ b/post-style.scss
@@ -39,7 +39,7 @@
     margin-right: spacing.$spacing-small;
 }
 .toc-overflow-box {
-    width: min(300px, 25vw);
+    width: min(200px, 25vw);
     box-sizing: border-box;
     height: 100vh;
     overflow: auto;
@@ -88,4 +88,8 @@
 }
 .toc-entry a:hover {
     text-decoration-color: currentcolor;
+}
+
+.not-toc {
+    min-width: 0;
 }
