--- a/_sass/markdowncontent.scss
+++ b/_sass/markdowncontent.scss
@@ -6,55 +6,55 @@
     @include type.content-h1;
     margin-top: spacing.$spacing-xlarge;
     margin-bottom: spacing.$spacing-large;
-    color: colors.$on-surface;
+    color: var(--color-on-surface);
 }
 .markdowncontent h2 {
     @include type.content-h2;
     margin-top: spacing.$spacing-large;
     margin-bottom: spacing.$spacing-medium;
-    color: colors.$on-surface;
+    color: var(--color-on-surface);
 }
 .markdowncontent h3 {
     @include type.content-h3;
     margin-top: spacing.$spacing-medium;
     margin-bottom: spacing.$spacing-medium;
-    color: colors.$on-surface;
+    color: var(--color-on-surface);
 }
 .markdowncontent h4 {
     @include type.content-h4;
     margin-top: spacing.$spacing-medium;
     margin-bottom: spacing.$spacing-small;
-    color: colors.$on-surface;
+    color: var(--color-on-surface);
 }
 .markdowncontent h5 {
     @include type.content-h5;
     margin-top: spacing.$spacing-medium;
     margin-bottom: spacing.$spacing-small;
-    color: colors.$on-surface;
+    color: var(--color-on-surface);
 }
 .markdowncontent h6 {
     @include type.content-h6;
     margin-top: spacing.$spacing-medium;
     margin-bottom: spacing.$spacing-small;
-    color: colors.$on-surface;
+    color: var(--color-on-surface);
 }
 .markdowncontent p {
     @include type.content-body;
     margin-top: spacing.$spacing-small;
     margin-bottom: spacing.$spacing-small;
     line-height: 1.5em;
-    color: colors.$on-surface;
+    color: var(--color-on-surface);
 }
 
 .markdowncontent a {
     @include type.content-body;
     text-decoration: underline;
-    color: colors.$primary;
+    color: var(--color-primary);
 }
 
 .markdowncontent :not(pre) > code {
     @include type.content-code-font;
-    background: colors.$surface-1;
+    background: var(--color-surface-1);
     padding: 0 spacing.$spacing-tiny;
     border-radius: spacing.$spacing-small;
     display: inline-block;
@@ -62,7 +62,7 @@
 
 .markdowncontent pre {
     @include type.content-code;
-    background: colors.$surface-1;
+    background: var(--color-surface-1);
     padding: spacing.$spacing-small spacing.$spacing-medium;
     border-radius: spacing.$spacing-medium;
     box-sizing: border-box;
@@ -76,7 +76,7 @@
     border-radius: spacing.$spacing-small;
 }
 .markdowncontent table {
-    background: colors.$surface-1;
+    background: var(--color-surface-1);
 
     padding: 0;
 
@@ -95,7 +95,7 @@
     @include type.content-body;
     font-weight: 700;
     padding: spacing.$spacing-tiny spacing.$spacing-small;
-    background: colors.$surface-2;
+    background: var(--color-surface-2);
 }
 .markdowncontent td {
     @include type.content-body;
@@ -105,7 +105,7 @@
 // Apply a border to the right of all but the last column
 .markdowncontent table th:not(:last-child),
 .markdowncontent table td:not(:last-child) {
- border-right: 1px solid colors.$outline-less;
+ border-right: 1px solid var(--color-outline-less);
 }
 // Apply a border to the bottom of all but the last row
 .markdowncontent table>thead>tr:not(:last-child)>th,
@@ -119,7 +119,7 @@
 .markdowncontent table>thead:not(:last-child),
 .markdowncontent table>tbody:not(:last-child),
 .markdowncontent table>tfoot:not(:last-child) {
- border-bottom: 1px solid colors.$outline-less;
+ border-bottom: 1px solid var(--color-outline-less);
 }
 
 .markdowncontent li {
