--- a/style.scss
+++ b/style.scss
@@ -8,8 +8,8 @@
 @use "syntax-highlighting-default.css";
 
 html {
-    background: colors.$surface-0;
-    color: colors.$on-surface;
+    background: var(--color-surface-0);
+    color: var(--color-on-surface);
 }
 
 body {
@@ -35,12 +35,12 @@ body {
     @include type.ui-big;
     text-align: center;
     margin: 0;
-    color: colors.$on-surface;
+    color: var(--color-on-surface);
 }
 .page-subtitle {
     @include type.ui-normal;
     text-align: center;
     margin-top: spacing.$spacing-small;
     margin-bottom: 0;
-    color: colors.$on-surface-less;
+    color: var(--color-on-surface-less);
 }
