--- a/style.scss
+++ b/style.scss
@@ -23,7 +23,7 @@ body {
 }
 @media screen and (max-width: 800px) {
     .notfullwidth {
-        max-width: none;
+        max-width: calc(100vw - #{spacing.$spacing-small} * 2);
     }
 }
 
